fixed navbar covering heading, if ranking is displayed

--- a/frontend/src/pages/Taste.css
+++ b/frontend/src/pages/Taste.css
@@ -8,6 +8,9 @@
     min-height: 83vh;
 }
 
+.main-heading {
+    margin-top: 100px;
+}
 .taste-heading {
     text-align: center;
     margin-bottom: 30px;
